Removed  credentials: include from fetchBaseQuery definition as requested by backend devs,fixed auto-fill blue background issues on forms.

--- a/src/index.css
+++ b/src/index.css
@@ -91,3 +91,8 @@ body {
   height: 100%;
   background-color: #f00530;
 }
+
+input:-webkit-autofill,
+  input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
+  }
