--- a/src/components/Dashboard/Calendar.css
+++ b/src/components/Dashboard/Calendar.css
@@ -37,8 +37,8 @@
 }
 .react-calendar__navigation {
   display: flex;
-  height: 44px;
-  margin-bottom: 1em;
+  height: 40px;
+  /* margin-bottom: 1em; */
 }
 .react-calendar__navigation button {
   min-width: 44px;
